[tool.poetry]
name = "higher-lower-game"
version = "0.1.0"
description = ""
authors = ["Jia Wei Hong <jiaweihong1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
customtkinter = "^5.2.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
